--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
+    "react-vanilla-tilt": "^1.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
